[gd_scene load_steps=12 format=4 uid="uid://5412ki602xej"]

[ext_resource type="Script" uid="uid://dsl7jitnilqo0" path="res://Levels/TwoLoop/PortalPlatform/portal_platform.gd" id="1_hd05j"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="1_k4sjg"]
[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_k8vwy"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="2_3ax58"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="3_327uo"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="3_nh0yo"]
[ext_resource type="TileSet" uid="uid://b2bi7bmwgp3qc" path="res://Environment/hazards.tres" id="4_j3adp"]
[ext_resource type="PackedScene" uid="uid://d0y011d078tou" path="res://Objects/Box/box.tscn" id="4_rayfy"]
[ext_resource type="PackedScene" uid="uid://ce0fyafaupkhg" path="res://Objects/Box/heavy_box.tscn" id="5_3ax58"]
[ext_resource type="PackedScene" uid="uid://bc4mudwsgjt1o" path="res://Objects/Portal/portal.tscn" id="7_e5nx2"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="11_rq6ym"]

[node name="PortalPlatform" type="Node2D"]
script = ExtResource("1_hd05j")

[node name="DudDoor" parent="." instance=ExtResource("3_nh0yo")]
position = Vector2(126, 48)

[node name="Door" parent="." instance=ExtResource("2_3ax58")]
position = Vector2(543, 160)

[node name="Button" parent="." instance=ExtResource("3_327uo")]
position = Vector2(327, 80)

[node name="SlidePlatform" parent="." instance=ExtResource("11_rq6ym")]
position = Vector2(356, 160)
rotation = 1.5708
speed = 0.07

[node name="Endpoint" parent="SlidePlatform" index="0"]
position = Vector2(356, 224)

[node name="SlidePlatform2" parent="." instance=ExtResource("11_rq6ym")]
position = Vector2(420, 224)
rotation = 1.5708
speed = 0.07

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(420, 160)

[node name="Box" parent="." instance=ExtResource("4_rayfy")]
position = Vector2(246, 64)

[node name="HeavyBox" parent="." instance=ExtResource("5_3ax58")]
position = Vector2(82, 64)

[node name="Hazards" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAkAAAAAAAAAAQABAAkAAAAAAAAAAQACAAkAAAAAAAAAAQADAAkAAAAAAAAAAQAEAAkAAAAAAAAAAQAFAAkAAAAAAAAAAQAGAAkAAAAAAAAAAQAHAAkAAAAAAAAAAQAIAAkAAAAAAAAAAQAJAAkAAAAAAAAAAQA=")
tile_set = ExtResource("4_j3adp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAMAAAAAAAEAAgACAAEAAAAAAAIAAgACAAEAAAAAAAMAAgACAAEAAAAAAAQAAgACAAEAAAAAAAUAAgACAAEAAAAAAAYAAgACAAEAAAAAAAcAAgACAAEAAAAAAAgAAgACAAEAAAAAAAkAAgACAAMAAAAAAAoAAgAAAAMAAAAAAAsAAgACAAEAAAAAAAwAAgACAAEAAAAAAA0AAgACAAEAAAAAAA4AAgACAAEAAAAAAA8AAgACAAEAAAAAABAAAgACAAEAAAAAABEAAgACAAEAAAAAABIAAgACAAEAAAAAABMAAgACAAEAAAAAABQAAgACAAMAAAABAAAAAgABAAIAAAACAAAAAgABAAIAAAADAAAAAgABAAIAAAAEAAAAAgABAAIAAAAFAAAAAgABAAIAAAAGAAAAAgABAAIAAAAHAAAAAgABAAIAAAAIAAAAAgABAAIAAAAJAAAAAgABAAIAAAAKAAAAAgABAAIAAAALAAAAAgABAAIAAAAMAAAAAgABAAIAAAANAAAAAgABAAIAAAAOAAAAAgABAAIAAAAPAAAAAgABAAIAAAAQAAAAAgABAAIAAAARAAAAAgABAAIAAAASAAAAAgABAAIAAAATAAAAAgABAAIAAAAUAAAAAgABAAIAAAAVAAAAAgABAAIAAAAWAAAAAgABAAMAAAAXAAAAAgABAAEAAAAYAAAAAgABAAEAAAAZAAAAAgABAAEAAAAaAAAAAgABAAEAAAAbAAAAAgABAAEAAAAcAAAAAgABAAEAAAAdAAAAAgABAAEAAAAeAAAAAgABAAEAAAAfAAAAAgABAAEAAAAgAAAAAgABAAEAAAAhAAAAAgABAAEAAAAiAAAAAgABAAEAAAAjAAAAAgABAAEAAAAkAAAAAgABAAEAAAAEAAcAAgAAAAEAAAAEAAgAAgAAAAEAAAADAAkAAgABAAAAAAACAAkAAgABAAAAAAABAAkAAgABAAAAAAAEAAkAAgAAAAQAAAABABQAAgABAAAAAAACABQAAgABAAAAAAADABQAAgABAAAAAAAEABQAAgABAAAAAAAFABQAAgABAAAAAAAGABQAAgABAAAAAAAHABQAAgABAAAAAAAIABQAAgABAAAAAAAJABQAAgABAAAAAAAKABQAAgABAAAAAAALABQAAgABAAAAAAAMABQAAgABAAAAAAANABQAAgABAAAAAAAOABQAAgABAAAAAAAPABQAAgABAAAAAAAQABQAAgABAAAAAAARABQAAgABAAAAAAASABQAAgABAAAAAAATABQAAgABAAAAAAAUABQAAgAAAAQAAAAVABQAAgABAAEAAAAWABQAAgABAAEAAAAXABQAAgABAAEAAAAYABQAAgABAAEAAAAZABQAAgABAAEAAAAaABQAAgABAAEAAAAbABQAAgABAAEAAAAcABQAAgABAAEAAAAdABQAAgABAAEAAAAeABQAAgABAAEAAAAfABQAAgABAAEAAAAgABQAAgABAAEAAAAhABQAAgABAAEAAAAiABQAAgABAAEAAAAjABQAAgABAAEAAAAkABQAAgABAAEAAAAkABMAAgABAAEAAAAkABIAAgABAAEAAAAkABEAAgABAAEAAAAkABAAAgABAAEAAAAkAA8AAgABAAEAAAAkAA4AAgABAAEAAAAkAA0AAgABAAEAAAAkAAwAAgAAAAQAAAAkAAsAAgAAAAEAAAAkAAoAAgAAAAEAAAAkAAkAAgAAAAEAAAAkAAgAAgAAAAEAAAAkAAcAAgAAAAEAAAAkAAYAAgAAAAEAAAAkAAUAAgABAAMAAAAkAAQAAgABAAEAAAAkAAMAAgABAAEAAAAkAAIAAgABAAEAAAAkAAEAAgABAAEAAAAZAAYAAgABAAEAAAAaAAYAAgABAAEAAAAbAAYAAgABAAEAAAAcAAYAAgABAAEAAAAdAAYAAgABAAEAAAAeAAYAAgABAAEAAAAfAAYAAgACAAEAAAAfAAUAAgAAAAMAAAAfAAQAAgABAAEAAAAgAAUAAgABAAIAAAAhAAUAAgABAAIAAAAiAAUAAgABAAIAAAAjAAUAAgABAAIAAAAZAAQAAgABAAEAAAAZAAMAAgABAAEAAAAZAAIAAgABAAEAAAAZAAEAAgABAAEAAAAZAAUAAgABAAEAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAEAAAAFAAUAAgABAAAAAAAFAAYAAgABAAEAAAAGAAUAAgABAAAAAAAGAAYAAgABAAEAAAAHAAUAAgABAAAAAAAHAAYAAgABAAEAAAAIAAUAAgABAAAAAAAIAAYAAgABAAEAAAAJAAUAAgABAAAAAAAJAAYAAgABAAEAAAAKAAUAAgABAAAAAAAKAAYAAgABAAEAAAALAAUAAgACAAAAAAALAAYAAgACAAEAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAEAAAAPAAUAAgABAAAAAAAPAAYAAgABAAEAAAAQAAUAAgABAAAAAAAQAAYAAgABAAEAAAARAAUAAgABAAAAAAARAAYAAgABAAEAAAASAAUAAgABAAAAAAASAAYAAgABAAEAAAATAAUAAgABAAAAAAATAAYAAgABAAEAAAAFAAcAAgAAAAMAAAAGAAcAAgABAAIAAAAHAAcAAgABAAIAAAAIAAcAAgABAAIAAAAJAAcAAgABAAIAAAAKAAcAAgABAAIAAAALAAcAAgACAAIAAAAOAAcAAgAAAAIAAAAPAAcAAgABAAIAAAAQAAcAAgABAAIAAAARAAcAAgABAAIAAAASAAcAAgABAAIAAAATAAcAAgABAAIAAAAUAAwAAgAAAAAAAAAUAA0AAgAAAAEAAAAUAA4AAgAAAAEAAAAUAA8AAgAAAAEAAAAUABAAAgAAAAEAAAAUABEAAgAAAAEAAAAUABIAAgAAAAEAAAAUABMAAgAAAAEAAAAaAAwAAgABAAAAAAAbAAwAAgABAAAAAAAcAAwAAgABAAAAAAAdAAwAAgABAAAAAAAeAAwAAgABAAAAAAAfAAwAAgABAAAAAAAgAAwAAgABAAAAAAAhAAwAAgABAAAAAAAiAAwAAgABAAAAAAAjAAwAAgABAAAAAAAZAAwAAgABAAAAAAAYAAwAAgABAAAAAAAXAAwAAgABAAAAAAAWAAwAAgABAAAAAAAVAAwAAgABAAAAAAAUAAcAAgABAAIAAAAVAAcAAgABAAIAAAAWAAcAAgABAAIAAAAXAAcAAgABAAIAAAAYAAcAAgABAAIAAAAZAAcAAgABAAIAAAAaAAcAAgABAAIAAAAbAAcAAgABAAIAAAAcAAcAAgABAAIAAAAdAAcAAgABAAIAAAAeAAcAAgABAAIAAAAfAAcAAgACAAIAAAAUAAUAAgABAAAAAAAUAAYAAgABAAEAAAAVAAUAAgABAAAAAAAVAAYAAgABAAEAAAAWAAEAAgAAAAEAAAAWAAIAAgAAAAEAAAAWAAMAAgAAAAEAAAAWAAQAAgAAAAEAAAAWAAUAAgAAAAQAAAAWAAYAAgABAAEAAAAXAAEAAgABAAEAAAAXAAIAAgABAAEAAAAXAAMAAgABAAEAAAAXAAQAAgABAAEAAAAXAAUAAgABAAEAAAAXAAYAAgABAAEAAAAYAAEAAgABAAEAAAAYAAIAAgABAAEAAAAYAAMAAgABAAEAAAAYAAQAAgABAAEAAAAYAAUAAgABAAEAAAAYAAYAAgABAAEAAAAaAAEAAgABAAEAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAaAAQAAgABAAEAAAAaAAUAAgABAAEAAAAbAAEAAgABAAEAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAbAAQAAgABAAEAAAAbAAUAAgABAAEAAAAcAAEAAgABAAEAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAcAAQAAgABAAEAAAAcAAUAAgABAAEAAAAdAAEAAgABAAEAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAdAAQAAgABAAEAAAAdAAUAAgABAAEAAAAeAAEAAgABAAEAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAeAAQAAgABAAEAAAAeAAUAAgABAAEAAAAfAAEAAgABAAEAAAAfAAIAAgABAAEAAAAfAAMAAgABAAEAAAAgAAEAAgABAAEAAAAgAAIAAgABAAEAAAAgAAMAAgABAAEAAAAgAAQAAgABAAEAAAAhAAEAAgABAAEAAAAhAAIAAgABAAEAAAAhAAMAAgABAAEAAAAhAAQAAgABAAEAAAAiAAEAAgABAAEAAAAiAAIAAgABAAEAAAAiAAMAAgABAAEAAAAiAAQAAgABAAEAAAAjAAEAAgABAAEAAAAjAAIAAgABAAEAAAAjAAMAAgABAAEAAAAjAAQAAgABAAEAAAAVAA0AAgABAAEAAAAVAA4AAgABAAEAAAAVAA8AAgABAAEAAAAVABAAAgABAAEAAAAVABEAAgABAAEAAAAVABIAAgABAAEAAAAVABMAAgABAAEAAAAWAA0AAgABAAEAAAAWAA4AAgABAAEAAAAWAA8AAgABAAEAAAAWABAAAgABAAEAAAAWABEAAgABAAEAAAAWABIAAgABAAEAAAAWABMAAgABAAEAAAAXAA0AAgABAAEAAAAXAA4AAgABAAEAAAAXAA8AAgABAAEAAAAXABAAAgABAAEAAAAXABEAAgABAAEAAAAXABIAAgABAAEAAAAXABMAAgABAAEAAAAYAA0AAgABAAEAAAAYAA4AAgABAAEAAAAYAA8AAgABAAEAAAAYABAAAgABAAEAAAAYABEAAgABAAEAAAAYABIAAgABAAEAAAAYABMAAgABAAEAAAAZAA0AAgABAAEAAAAZAA4AAgABAAEAAAAZAA8AAgABAAEAAAAZABAAAgABAAEAAAAZABEAAgABAAEAAAAZABIAAgABAAEAAAAZABMAAgABAAEAAAAaAA0AAgABAAEAAAAaAA4AAgABAAEAAAAaAA8AAgABAAEAAAAaABAAAgABAAEAAAAaABEAAgABAAEAAAAaABIAAgABAAEAAAAaABMAAgABAAEAAAAbAA0AAgABAAEAAAAbAA4AAgABAAEAAAAbAA8AAgABAAEAAAAbABAAAgABAAEAAAAbABEAAgABAAEAAAAbABIAAgABAAEAAAAbABMAAgABAAEAAAAcAA0AAgABAAEAAAAcAA4AAgABAAEAAAAcAA8AAgABAAEAAAAcABAAAgABAAEAAAAcABEAAgABAAEAAAAcABIAAgABAAEAAAAcABMAAgABAAEAAAAdAA0AAgABAAEAAAAdAA4AAgABAAEAAAAdAA8AAgABAAEAAAAdABAAAgABAAEAAAAdABEAAgABAAEAAAAdABIAAgABAAEAAAAdABMAAgABAAEAAAAeAA0AAgABAAEAAAAeAA4AAgABAAEAAAAeAA8AAgABAAEAAAAeABAAAgABAAEAAAAeABEAAgABAAEAAAAeABIAAgABAAEAAAAeABMAAgABAAEAAAAfAA0AAgABAAEAAAAfAA4AAgABAAEAAAAfAA8AAgABAAEAAAAfABAAAgABAAEAAAAfABEAAgABAAEAAAAfABIAAgABAAEAAAAfABMAAgABAAEAAAAgAA0AAgABAAEAAAAgAA4AAgABAAEAAAAgAA8AAgABAAEAAAAgABAAAgABAAEAAAAgABEAAgABAAEAAAAgABIAAgABAAEAAAAgABMAAgABAAEAAAAhAA0AAgABAAEAAAAhAA4AAgABAAEAAAAhAA8AAgABAAEAAAAhABAAAgABAAEAAAAhABEAAgABAAEAAAAhABIAAgABAAEAAAAhABMAAgABAAEAAAAiAA0AAgABAAEAAAAiAA4AAgABAAEAAAAiAA8AAgABAAEAAAAiABAAAgABAAEAAAAiABEAAgABAAEAAAAiABIAAgABAAEAAAAiABMAAgABAAEAAAAjAA0AAgABAAEAAAAjAA4AAgABAAEAAAAjAA8AAgABAAEAAAAjABAAAgABAAEAAAAjABEAAgABAAEAAAAjABIAAgABAAEAAAAjABMAAgABAAEAAAAFAAgAAgACAAEAAAAFAAkAAgACAAEAAAAEAAoAAgABAAIAAAADAAoAAgABAAIAAAACAAoAAgABAAIAAAABAAoAAgABAAIAAAAFAAoAAgACAAIAAAABABIAAQASAAAAAAABABMAAQASAAEAAAATABIAAQAVAAAAAAATABMAAQAVAAEAAAA=")
tile_set = ExtResource("1_k8vwy")

[node name="Portal" parent="." instance=ExtResource("7_e5nx2")]
position = Vector2(40, 142)
rotation = -1.5708

[node name="Portal2" parent="." instance=ExtResource("7_e5nx2")]
position = Vector2(207, 257)
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource("1_k4sjg")]
position = Vector2(128, 80)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 592
limit_bottom = 336

[connection signal="just_pressed" from="Button" to="." method="_on_button_just_pressed"]
[connection signal="just_unpressed" from="Button" to="." method="_on_button_just_unpressed"]

[editable path="SlidePlatform"]
[editable path="SlidePlatform2"]
